--- a/package.json
+++ b/package.json
@@ -24,5 +24,12 @@
     "react-router": "^0.13.3",
     "reqwest": "^2.0.1",
     "when": "^3.7.3"
+  },
+  "devDependencies": {
+    "babel": "^5.8.20",
+    "babel-core": "^5.8.20",
+    "babel-loader": "^5.3.2",
+    "css-loader": "^0.15.6",
+    "webpack": "^1.10.5"
   }
 }
